last commit on old pc