@@ -30,6 +30,7 @@ import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
 @Service
@@ -73,80 +74,62 @@ public class ArmoryService {
     }
 
     public List<Caliber> getSumFromAllAmmoList(LocalDate firstDate, LocalDate secondDate) {
-        List<Caliber> list = caliberService.getCalibersEntityList().stream().map(Mapping::map).collect(Collectors.toList());
+        List<Caliber> list = caliberService.getCalibersEntityList().stream().map(Mapping::map).toList();
         List<Caliber> list1 = new ArrayList<>();
-        list.forEach(e -> ammoEvidenceRepository.findAll().stream()
-                .filter(f -> f.getDate().isAfter(firstDate.minusDays(1)))
-                .filter(f -> f.getDate().isBefore(secondDate.plusDays(1)))
-                .forEach(g -> g.getAmmoInEvidenceEntityList()
-                        .stream().filter(f -> f.getCaliberName().equals(e.getName()))
-                        .forEach(h -> {
-                            Caliber caliber = list.stream()
-                                    .filter(f -> f.getName().equals(e.getName())).findFirst().orElseThrow(EntityNotFoundException::new);
-                            if (caliber.getQuantity() == null) {
-                                caliber.setQuantity(0);
-                            }
-                            if (list1.stream().anyMatch(f -> f.getName().equals(caliber.getName()))) {
-                                Caliber caliber1 = list1.stream().filter(f -> f.getName().equals(caliber.getName())).findFirst().orElseThrow(EntityNotFoundException::new);
-                                caliber.setQuantity(caliber1.getQuantity() + h.getQuantity());
-                            } else {
-                                caliber.setQuantity(h.getQuantity());
-                                list1.add(caliber);
-                            }
-                        })
-                ));
+        list.forEach(e -> ammoEvidenceRepository.findAll().stream().filter(f -> f.getDate().isAfter(firstDate.minusDays(1))).filter(f -> f.getDate().isBefore(secondDate.plusDays(1))).forEach(g -> g.getAmmoInEvidenceEntityList().stream().filter(f -> f.getCaliberName().equals(e.getName())).forEach(h -> {
+            Caliber caliber = list.stream().filter(f -> f.getName().equals(e.getName())).findFirst().orElseThrow(EntityNotFoundException::new);
+            if (caliber.getQuantity() == null) {
+                caliber.setQuantity(0);
+            }
+            if (list1.stream().anyMatch(f -> f.getName().equals(caliber.getName()))) {
+                Caliber caliber1 = list1.stream().filter(f -> f.getName().equals(caliber.getName())).findFirst().orElseThrow(EntityNotFoundException::new);
+                caliber.setQuantity(caliber1.getQuantity() + h.getQuantity());
+            } else {
+                caliber.setQuantity(h.getQuantity());
+                list1.add(caliber);
+            }
+        })));
         return list1;
     }
 
     public ResponseEntity<?> updateAmmo(String caliberUUID, Integer count, LocalDate date, LocalTime time, String description, String imageUUID, String pinCode) throws NoUserPermissionException {
-        String code = Hashing.sha256().hashString(pinCode, StandardCharsets.UTF_8).toString();
-        UserEntity user = userRepository.findByPinCode(code);
-        if (!user.getUserPermissionsList().contains(UserSubType.WEAPONS_WAREHOUSEMAN.getName())) {
-            filesRepository.deleteById(imageUUID);
+        String code = getHash(pinCode);
+        UserEntity user = userRepository.findByPinCode(code).orElse(null);
+        if (user == null) {
+            if (imageUUID != null) {
+                filesRepository.deleteById(imageUUID);
+            }
+            return ResponseEntity.badRequest().body("Nieprawidłowy PIN");
+        }
+        if (user.getUserPermissionsList() == null || !user.getUserPermissionsList().contains(UserSubType.WEAPONS_WAREHOUSEMAN.getName())) {
+            if (imageUUID != null) {
+                filesRepository.deleteById(imageUUID);
+            }
             return ResponseEntity.badRequest().body("Brak uprawnień");
         }
-
-        CaliberEntity caliberEntity = caliberRepository.getOne(caliberUUID);
+        CaliberEntity caliberEntity = caliberRepository.findById(caliberUUID).orElseThrow(EntityNotFoundException::new);
         if (caliberEntity.getQuantity() == null) {
             caliberEntity.setQuantity(0);
         }
         int caliberAmmoInStore = caliberService.getCaliberAmmoInStore(caliberUUID);
-        CalibersAddedEntity calibersAddedEntity = CalibersAddedEntity.builder()
-                .addedBy(user.getFullName())
-                .imageUUID(imageUUID)
-                .ammoAdded(count)
-                .belongTo(caliberUUID)
-                .caliberName(caliberEntity.getName())
-                .date(date)
-                .time(time)
-                .description(description)
-                .stateForAddedDay(caliberAmmoInStore)
-                .finalStateForAddedDay(caliberAmmoInStore + count)
-                .build();
+        CalibersAddedEntity calibersAddedEntity = CalibersAddedEntity.builder().addedBy(user.getFullName()).imageUUID(imageUUID).ammoAdded(count).belongTo(caliberUUID).caliberName(caliberEntity.getName()).date(date).time(time).description(description).stateForAddedDay(caliberAmmoInStore).finalStateForAddedDay(caliberAmmoInStore + count).build();
         calibersAddedRepository.save(calibersAddedEntity);
-
         List<CalibersAddedEntity> ammoAdded = caliberEntity.getAmmoAdded();
-        ammoAdded.add(calibersAddedEntity);
-        if (caliberEntity.getQuantity() == null) {
-            caliberEntity.setQuantity(0);
+        if (ammoAdded != null) {
+            ammoAdded.add(calibersAddedEntity);
         }
         caliberEntity.setQuantity(caliberEntity.getQuantity() + calibersAddedEntity.getAmmoAdded());
-        ResponseEntity<?> response = historyService.getStringResponseEntity(pinCode, caliberEntity, HttpStatus.OK, "Dodano amunicję do kaibru " + caliberEntity.getName(), "Dodano amunicję do kaibru " + caliberEntity.getName());
-        if (response.getStatusCode().equals(HttpStatus.OK)) {
+        ResponseEntity<?> response = historyService.getStringResponseEntity(pinCode, caliberEntity, HttpStatus.OK, "Dodano amunicję do kalibru " + caliberEntity.getName(), "Dodano amunicję do kalibru " + caliberEntity.getName());
+        if (response.getStatusCode() == HttpStatus.OK) {
             caliberRepository.save(caliberEntity);
         }
         return response;
     }
 
+
     public void substratAmmo(String caliberUUID, Integer quantity) {
         CaliberEntity caliberEntity = caliberRepository.getOne(caliberUUID);
-        CaliberUsedEntity caliberUsedEntity = CaliberUsedEntity.builder()
-                .date(LocalDate.now())
-                .time(LocalTime.now())
-                .belongTo(caliberUUID)
-                .ammoUsed(quantity)
-                .unitPrice(caliberEntity.getUnitPrice())
-                .build();
+        CaliberUsedEntity caliberUsedEntity = CaliberUsedEntity.builder().date(LocalDate.now()).time(LocalTime.now()).belongTo(caliberUUID).ammoUsed(quantity).unitPrice(caliberEntity.getUnitPrice()).build();
         caliberUsedRepository.save(caliberUsedEntity);
         List<CaliberUsedEntity> ammoUsed = caliberEntity.getAmmoUsed();
         ammoUsed.add(caliberUsedEntity);
@@ -156,107 +139,63 @@ public class ArmoryService {
     }
 
     public List<CalibersAddedEntity> getHistoryOfCaliber(String caliberUUID) {
-        return caliberRepository.getOne(caliberUUID)
-                .getAmmoAdded()
-                .stream()
-                .sorted(Comparator.comparing(CalibersAddedEntity::getDate))
-                .collect(Collectors.toList());
+        return caliberRepository.getOne(caliberUUID).getAmmoAdded().stream().sorted(Comparator.comparing(CalibersAddedEntity::getDate)).collect(Collectors.toList());
     }
 
     public ResponseEntity<?> addGunEntity(AddGunImageWrapper addGunImageWrapper, String imageUUID, String pinCode) {
         Gun gun = addGunImageWrapper.getGun();
-        String code = Hashing.sha256().hashString(pinCode, StandardCharsets.UTF_8).toString();
-        UserEntity user = userRepository.findByPinCode(code);
-        if ((gun.getModelName().isEmpty() || gun.getModelName().equals("null")) || (gun.getCaliber().isEmpty() || gun.getCaliber().equals("null")) || (gun.getGunType().isEmpty() || gun.getGunType().equals("null")) || (gun.getSerialNumber().isEmpty() || gun.getSerialNumber().equals("null"))) {
+        String code = getHash(pinCode);
+        UserEntity user = userRepository.findByPinCode(code).orElse(null);
+        if (user == null) {
+            return ResponseEntity.badRequest().body("Nieprawidłowy PIN");
+        }
+        if (isBlank(gun.getModelName()) || isBlank(gun.getCaliber()) || isBlank(gun.getGunType()) || isBlank(gun.getSerialNumber())) {
+
             LOG.info("Nie podano wszystkich informacji");
             return ResponseEntity.badRequest().body("Nie podano wszystkich informacji");
         }
-        if (gun.getProductionYear() == null || gun.getProductionYear().isEmpty() || gun.getProductionYear().equals("null")) {
-            gun.setProductionYear(null);
-        }
-        if (gun.getAdditionalEquipment() == null || gun.getAdditionalEquipment().isEmpty() || gun.getAdditionalEquipment().equals("null")) {
-            gun.setAdditionalEquipment(null);
-        }
-        if (gun.getComment() == null || gun.getComment().isEmpty() || gun.getComment().equals("null")) {
-            gun.setComment(null);
-        }
-        if (gun.getBarcode() == null || gun.getBarcode().isEmpty() || gun.getBarcode().equals("null")) {
-            gun.setBarcode(null);
-        }
-        if (gun.getGunCertificateSerialNumber() == null || gun.getGunCertificateSerialNumber().isEmpty() || gun.getGunCertificateSerialNumber().equals("null")) {
-            gun.setGunCertificateSerialNumber(null);
-        }
-        if (gun.getRecordInEvidenceBook() == null || gun.getRecordInEvidenceBook().isEmpty() || gun.getRecordInEvidenceBook().equals("null")) {
-            gun.setRecordInEvidenceBook(null);
-        }
+        gun.setProductionYear(normalizeNullable(gun.getProductionYear()));
+        gun.setAdditionalEquipment(normalizeNullable(gun.getAdditionalEquipment()));
+        gun.setComment(normalizeNullable(gun.getComment()));
+        gun.setBarcode(normalizeNullable(gun.getBarcode()));
+        gun.setGunCertificateSerialNumber(normalizeNullable(gun.getGunCertificateSerialNumber()));
+        gun.setRecordInEvidenceBook(normalizeNullable(gun.getRecordInEvidenceBook()));
 
-        List<GunEntity> all = gunRepository.findAll();
+        if (gun.getGunCertificateSerialNumber() != null && gunRepository.existsByGunCertificateSerialNumber(gun.getGunCertificateSerialNumber())) {
 
-        if (gun.getGunCertificateSerialNumber() != null) {
-            if (all.stream().filter(f -> f.getGunCertificateSerialNumber() != null).anyMatch(f -> f.getGunCertificateSerialNumber().equals(gun.getGunCertificateSerialNumber()))) {
-                LOG.info("Nie można dodać broni. Upewnij się, że numer seryjny, numer świadectwa lub numer z książki ewidencji się nie powtarza");
-                return ResponseEntity.badRequest().body("Nie można dodać broni. Upewnij się, że numer seryjny, numer świadectwa lub numer z książki ewidencji się nie powtarza");
-            }
+            return ResponseEntity.badRequest().body("Nie można dodać broni – numer świadectwa już istnieje");
         }
-        if (gun.getSerialNumber() != null) {
-            if (all.stream().filter(f -> f.getSerialNumber() != null).anyMatch(e -> e.getSerialNumber().equals(gun.getSerialNumber()))) {
-                LOG.info("Nie można dodać broni. Upewnij się, że numer seryjny, numer świadectwa lub numer z książki ewidencji się nie powtarza");
-                return ResponseEntity.badRequest().body("Nie można dodać broni. Upewnij się, że numer seryjny, numer świadectwa lub numer z książki ewidencji się nie powtarza");
-            }
+        if (gunRepository.existsBySerialNumber(gun.getSerialNumber())) {
+            return ResponseEntity.badRequest().body("Nie można dodać broni – numer seryjny już istnieje");
         }
-        if (gun.getRecordInEvidenceBook() != null) {
-            if (all.stream().filter(f -> f.getRecordInEvidenceBook() != null).anyMatch(e -> e.getRecordInEvidenceBook().equals(gun.getRecordInEvidenceBook()))) {
-                LOG.info("Nie można dodać broni. Upewnij się, że numer seryjny, numer świadectwa lub numer z książki ewidencji się nie powtarza");
-                return ResponseEntity.badRequest().body("Nie można dodać broni. Upewnij się, że numer seryjny, numer świadectwa lub numer z książki ewidencji się nie powtarza");
-            }
+        if (gun.getRecordInEvidenceBook() != null && gunRepository.existsByRecordInEvidenceBook(gun.getRecordInEvidenceBook())) {
+            return ResponseEntity.badRequest().body("Nie można dodać broni – numer z książki ewidencji już istnieje");
         }
-        if (gun.getBarcode() != null) {
-            if (all.stream().filter(f -> f.getBarcode() != null).anyMatch(e -> e.getBarcode().equals(gun.getBarcode()))) {
-                LOG.info("Nie można Nadać kodu kreskowego gdyż jest przypisany już gdzieś indziej");
-                return ResponseEntity.badRequest().body("Nie można Nadać kodu kreskowego gdyż jest przypisany już gdzieś indziej");
-            }
+        if (gun.getBarcode() != null && gunRepository.existsByBarcode(gun.getBarcode())) {
+            return ResponseEntity.badRequest().body("Nie można nadać kodu kreskowego – jest już przypisany");
         }
-
-        String s = null;
-        if (gun.getGunCertificateSerialNumber() != null) {
-            s = gun.getGunCertificateSerialNumber().toUpperCase();
-        }
-
-        GunEntity gunEntity = GunEntity.builder()
-                .modelName(gun.getModelName().toUpperCase())
-                .caliber(gun.getCaliber())
-                .gunType(gun.getGunType())
-                .serialNumber(gun.getSerialNumber().toUpperCase())
-                .productionYear(gun.getProductionYear())
-                .numberOfMagazines(gun.getNumberOfMagazines())
-                .gunCertificateSerialNumber(s)
-                .additionalEquipment(gun.getAdditionalEquipment())
-                .recordInEvidenceBook(gun.getRecordInEvidenceBook())
-                .comment(gun.getComment())
-                .basisForPurchaseOrAssignment(gun.getBasisForPurchaseOrAssignment())
-                .barcode(gun.getBarcode())
-                .addedDate(gun.getAddedDate() != null ? gun.getAddedDate() : LocalDate.now())
-                .available(true)
-                .inStock(true).build();
-
+        GunEntity gunEntity = GunEntity.builder().modelName(gun.getModelName().toUpperCase()).caliber(gun.getCaliber()).gunType(gun.getGunType()).serialNumber(gun.getSerialNumber().toUpperCase()).productionYear(gun.getProductionYear()).numberOfMagazines(gun.getNumberOfMagazines()).gunCertificateSerialNumber(gun.getGunCertificateSerialNumber() != null ? gun.getGunCertificateSerialNumber().toUpperCase() : null).additionalEquipment(gun.getAdditionalEquipment()).recordInEvidenceBook(gun.getRecordInEvidenceBook()).comment(gun.getComment()).basisForPurchaseOrAssignment(gun.getBasisForPurchaseOrAssignment()).barcode(gun.getBarcode()).addedDate(gun.getAddedDate() != null ? gun.getAddedDate() : LocalDate.now()).available(true).inStock(true).build();
         gunEntity.setAddedSign(imageUUID);
         gunEntity.setAddedBy(user.getFullName());
         gunEntity.setAddedUserUUID(user.getUuid());
-        GunEntity save = gunRepository.save(gunEntity);
-        GunStoreEntity gunStoreEntity = gunStoreRepository.findByTypeName(gunEntity.getGunType());
-        List<GunEntity> gunEntityList = gunStoreEntity.getGunEntityList();
-        gunEntityList.add(gunEntity);
-
+        GunEntity savedGun = gunRepository.save(gunEntity);
+        GunStoreEntity gunStoreEntity = gunStoreRepository.findByTypeName(savedGun.getGunType());
+        gunStoreEntity.getGunEntityList().add(savedGun);
         gunStoreRepository.save(gunStoreEntity);
-        System.out.println(save.getAddedBy());
+        LOG.info("Dodano broń: {}", savedGun.getModelName());
         return ResponseEntity.ok("Dodano broń");
+    }
 
+    private boolean isBlank(String value) {
+        return value == null || value.isBlank() || value.equalsIgnoreCase("null");
+    }
 
+    private String normalizeNullable(String value) {
+        return isBlank(value) ? null : value;
     }
 
     public List<GunStoreEntity> getGunTypeList() {
-        return gunStoreRepository.findAll().stream().map(m -> GunStoreEntity.builder().uuid(m.getUuid()).gunEntityList(null).typeName(m.getTypeName()).build())
-                .sorted(Comparator.comparing(GunStoreEntity::getTypeName)).collect(Collectors.toList());
+        return gunStoreRepository.findAll().stream().map(m -> GunStoreEntity.builder().uuid(m.getUuid()).gunEntityList(null).typeName(m.getTypeName()).build()).sorted(Comparator.comparing(GunStoreEntity::getTypeName)).collect(Collectors.toList());
     }
 
     public List<?> getAllGuns() {
@@ -266,24 +205,21 @@ public class ArmoryService {
         all.forEach(e -> {
             GunStoreDTO dto = new GunStoreDTO();
             dto.setTypeName(e.getTypeName());
-            List<Gun> collect = e.getGunEntityList()
-                    .stream()
-                    .filter(GunEntity::isInStock)
-                    .map(Mapping::map)
-                    .sorted(Comparator.comparing(Gun::getModelName).reversed())
-                    .collect(Collectors.toList());
+            List<Gun> collect = e.getGunEntityList().stream().filter(GunEntity::isInStock).map(Mapping::map).sorted(Comparator.comparing(Gun::getModelName).reversed()).collect(Collectors.toList());
 
             dto.setGunList(collect);
             all1.add(dto);
         });
         return all1;
     }
+
     public void a() {
-        gunStoreRepository.findAll().forEach(e->{
+        gunStoreRepository.findAll().forEach(e -> {
             e.setRemovedGunEntityList(new ArrayList<>());
             gunStoreRepository.save(e);
         });
     }
+
     public void b() {
         List<GunStoreEntity> all = gunStoreRepository.findAll();
         gunRepository.findAll().forEach(e -> {
@@ -297,6 +233,7 @@ public class ArmoryService {
             }
         });
     }
+
     public List<?> getAllRemovedGuns() {
 //        a();
 //        b();
@@ -306,11 +243,7 @@ public class ArmoryService {
         all.forEach(e -> {
             GunStoreDTO dto = new GunStoreDTO();
             dto.setTypeName(e.getTypeName());
-            List<Gun> collect = e.getRemovedGunEntityList()
-                    .stream()
-                    .map(Mapping::map)
-                    .sorted(Comparator.comparing(Gun::getModelName).reversed())
-                    .collect(Collectors.toList());
+            List<Gun> collect = e.getRemovedGunEntityList().stream().map(Mapping::map).sorted(Comparator.comparing(Gun::getModelName).reversed()).collect(Collectors.toList());
             dto.setGunRemovedList(collect);
             all1.add(dto);
         });
@@ -318,70 +251,49 @@ public class ArmoryService {
     }
 
     public ResponseEntity<?> editGunEntity(Gun gun) {
-        GunEntity gunEntity = gunRepository.getOne(gun.getUuid());
-        if (gunEntity == null) {
-            return ResponseEntity.badRequest().body("Nie udało się zaktualizować broni");
-        }
-        if (gun.getModelName() != null && !gun.getModelName().isEmpty()) {
-            gunEntity.setModelName(gun.getModelName());
-        }
-        if (gun.getCaliber() != null && !gun.getCaliber().isEmpty()) {
-            gunEntity.setCaliber(gun.getCaliber());
-        }
-        if (gun.getGunType() != null && !gun.getGunType().isEmpty()) {
-            gunEntity.setGunType(gun.getGunType());
-        }
-        if (gun.getSerialNumber() != null && !gun.getSerialNumber().isEmpty()) {
-            gunEntity.setSerialNumber(gun.getSerialNumber());
-        }
-        if (gun.getProductionYear() != null && !gun.getProductionYear().isEmpty()) {
-            gunEntity.setProductionYear(gun.getProductionYear());
-        }
-        if (gun.getNumberOfMagazines() != null && !gun.getNumberOfMagazines().isEmpty()) {
-            gunEntity.setNumberOfMagazines(gun.getNumberOfMagazines());
-        }
-        if (gun.getGunCertificateSerialNumber() != null && !gun.getGunCertificateSerialNumber().isEmpty()) {
-            gunEntity.setGunCertificateSerialNumber(gun.getGunCertificateSerialNumber());
-        }
-        if (gun.getAdditionalEquipment() != null && !gun.getAdditionalEquipment().isEmpty()) {
-            gunEntity.setAdditionalEquipment(gun.getAdditionalEquipment());
-        }
-        if (gun.getRecordInEvidenceBook() != null && !gun.getRecordInEvidenceBook().isEmpty()) {
-            gunEntity.setRecordInEvidenceBook(gun.getRecordInEvidenceBook());
-        }
-        if (gun.getComment() != null && !gun.getComment().isEmpty()) {
-            gunEntity.setComment(gun.getComment());
-        }
-        if (gun.getBasisForPurchaseOrAssignment() != null && !gun.getBasisForPurchaseOrAssignment().isEmpty()) {
-            gunEntity.setBasisForPurchaseOrAssignment(gun.getBasisForPurchaseOrAssignment());
-        }
-        if (gun.getBarcode() != null && !gun.getBarcode().isEmpty()) {
-            gunEntity.setBarcode(gun.getBarcode());
-        }
-        if (gun.getAddedDate() != null && gunEntity.getAddedDate() != gun.getAddedDate()) {
+        GunEntity gunEntity = gunRepository.findById(gun.getUuid()).orElseThrow(EntityNotFoundException::new);
+        updateIfPresent(gun.getModelName(), gunEntity::setModelName);
+        updateIfPresent(gun.getCaliber(), gunEntity::setCaliber);
+        updateIfPresent(gun.getGunType(), gunEntity::setGunType);
+        updateIfPresent(gun.getSerialNumber(), gunEntity::setSerialNumber);
+        updateIfPresent(gun.getProductionYear(), gunEntity::setProductionYear);
+        updateIfPresent(gun.getNumberOfMagazines(), gunEntity::setNumberOfMagazines);
+        updateIfPresent(gun.getGunCertificateSerialNumber(), gunEntity::setGunCertificateSerialNumber);
+        updateIfPresent(gun.getAdditionalEquipment(), gunEntity::setAdditionalEquipment);
+        updateIfPresent(gun.getRecordInEvidenceBook(), gunEntity::setRecordInEvidenceBook);
+        updateIfPresent(gun.getComment(), gunEntity::setComment);
+        updateIfPresent(gun.getBasisForPurchaseOrAssignment(), gunEntity::setBasisForPurchaseOrAssignment);
+        updateIfPresent(gun.getBarcode(), gunEntity::setBarcode);
+        if (gun.getAddedDate() != null && !gun.getAddedDate().equals(gunEntity.getAddedDate())) {
             gunEntity.setAddedDate(gun.getAddedDate());
         }
         gunRepository.save(gunEntity);
         return ResponseEntity.ok("Zaktualizowano broń");
     }
 
-    public ResponseEntity<?> removeGun(String gunUUID,String basisOfRemoved, String pinCode, String imageUUID) throws NoUserPermissionException {
-
-        GunEntity gunEntity = gunRepository.getOne(gunUUID);
-        if (gunEntity == null) {
-            return ResponseEntity.badRequest().body("Nie ma takie Broni");
+    private void updateIfPresent(String value, Consumer<String> setter) {
+        if (value != null && !value.isBlank()) {
+            setter.accept(value);
         }
-        String code = Hashing.sha256().hashString(pinCode, StandardCharsets.UTF_8).toString();
-        UserEntity user = userRepository.findByPinCode(code);
+    }
+
+
+    public ResponseEntity<?> removeGun(String gunUUID, String basisOfRemoved, String pinCode, String imageUUID) throws NoUserPermissionException {
+
+        GunEntity gunEntity = gunRepository.findById(gunUUID).orElseThrow(() -> new EntityNotFoundException("Nie ma takiej broni"));
+        String code = getHash(pinCode);
+        UserEntity user = userRepository.findByPinCode(code).orElse(null);
+        if (user == null) {
+            throw new NoUserPermissionException();
+        }
         gunEntity.setInStock(false);
         gunEntity.setBasisOfRemoved(basisOfRemoved);
         gunEntity.setRemovedBy(user.getFullName());
         gunEntity.setRemovedSign(imageUUID);
         gunEntity.setRemovedUserUUID(user.getUuid());
         GunStoreEntity gunStoreEntity = gunStoreRepository.findAll().stream().filter(f -> f.getTypeName().equals(gunEntity.getGunType())).findFirst().orElseThrow(EntityNotFoundException::new);
-        // Very Important
+        // VERY IMPORTANT
         changeList(gunEntity, gunStoreEntity);
-
         ResponseEntity<?> response = historyService.getStringResponseEntity(pinCode, gunEntity, HttpStatus.OK, "removeGun", "Usunięto broń ze stanu magazynu");
         if (response.getStatusCode().equals(HttpStatus.OK)) {
             gunStoreRepository.save(gunStoreEntity);
@@ -408,10 +320,7 @@ public class ArmoryService {
                 name.append(splinted);
             }
 
-            GunStoreEntity build = GunStoreEntity.builder()
-                    .typeName(name.toString().trim())
-                    .gunEntityList(collect)
-                    .build();
+            GunStoreEntity build = GunStoreEntity.builder().typeName(name.toString().trim()).gunEntityList(collect).build();
             LOG.info("dodaję nowy rodzaj broni");
             gunStoreRepository.save(build);
             return ResponseEntity.ok("dodaję nowy rodzaj broni");
@@ -433,19 +342,15 @@ public class ArmoryService {
     }
 
     public void addUseToGun(String gunUUID, String gunUsedUUID) {
-        GunEntity gunEntity = gunRepository.getOne(gunUUID);
-        GunUsedEntity gunUsedEntity = gunUsedRepository.getOne(gunUsedUUID);
-        if (gunEntity == null) {
-            LOG.info("Nie znaleziono broni");
-        }
-        if (gunEntity != null && gunEntity.getGunUsedList() == null) {
+        GunEntity gunEntity = gunRepository.findById(gunUUID).orElseThrow(() -> new EntityNotFoundException("Nie znaleziono broni"));
+        GunUsedEntity gunUsedEntity = gunUsedRepository.findById(gunUsedUUID).orElseThrow(() -> new EntityNotFoundException("Nie znaleziono użycia broni"));
+        if (gunEntity.getGunUsedList() == null) {
             gunEntity.setGunUsedList(new ArrayList<>());
         }
-        assert gunEntity != null;
-        List<GunUsedEntity> gunUsedList = gunEntity.getGunUsedList();
-        gunUsedList.add(gunUsedEntity);
+        gunEntity.getGunUsedList().add(gunUsedEntity);
         gunRepository.save(gunEntity);
     }
+
 
     public List<UsedHistoryEntity> getGunUsedHistory(String gunUUID) {
 
@@ -453,36 +358,38 @@ public class ArmoryService {
 
     }
 
-    public ResponseEntity<?> addGunToList(List<String> gunUUIDList, LocalDate date, LocalTime time) {
-        List<GunEntity> entities = new ArrayList<>();
-        gunUUIDList.forEach(e -> entities.add(gunRepository.getOne(e)));
+    public ResponseEntity<List<String>> addGunToList(List<String> gunUUIDList, LocalDate date, LocalTime time) {
+
+        if (gunUUIDList == null || gunUUIDList.isEmpty()) {
+            return ResponseEntity.badRequest().body(List.of("Lista broni jest pusta"));
+        }
+
         List<String> response = new ArrayList<>();
-        entities.forEach(e -> {
-            if (e == null) {
+
+        // Pobieramy tylko potrzebne użycia z danego dnia (zamiast findAll())
+        List<GunUsedEntity> usedToday = gunUsedRepository.findAllByAcceptanceDateBetween(date, date);
+        for (String gunUUID : gunUUIDList) {
+            GunEntity gun = gunRepository.findById(gunUUID).orElse(null);
+            if (gun == null) {
                 response.add("Nie ma takiej broni");
-            } else {
-                if (gunUsedRepository.findAll().stream().anyMatch(a -> a.getGunUUID().equals(e.getUuid()) && a.getIssuanceDate().equals(date) && a.getAcceptanceSign() == null)) {
-                    response.add("Broń już znajduje się na liście " + e.getModelName() + " " + e.getSerialNumber());
-                } else {
-                    GunUsedEntity build = GunUsedEntity.builder()
-                            .gunRepresentationEntity(Mapping.mapToRepresentation(e))
-                            .usedDate(LocalDate.now())
-                            .usedTime(LocalTime.now())
-                            .issuanceDate(date)
-                            .issuanceTime(time)
-                            .gunUUID(e.getUuid())
-                            .build();
-                    gunUsedRepository.save(build);
-                    LOG.info("Dodano użycie Broni " + e.getModelName() + " " + e.getSerialNumber());
-                    response.add("Dodano użycie Broni " + e.getModelName() + " " + e.getSerialNumber());
-                }
+                continue;
             }
-        });
+            boolean alreadyOnList = usedToday.stream().anyMatch(a -> gunUUID.equals(a.getGunUUID()) && a.getAcceptanceSign() == null);
+            if (alreadyOnList) {
+                response.add("Broń już znajduje się na liście: " + gun.getModelName() + " " + gun.getSerialNumber());
+                continue;
+            }
+            GunUsedEntity build = GunUsedEntity.builder().gunRepresentationEntity(Mapping.mapToRepresentation(gun)).usedDate(LocalDate.now()).usedTime(LocalTime.now()).issuanceDate(date).issuanceTime(time).gunUUID(gun.getUuid()).build();
+            gunUsedRepository.save(build);
+            LOG.info("Dodano użycie Broni {} {}", gun.getModelName(), gun.getSerialNumber());
+            response.add("Dodano użycie Broni " + gun.getModelName() + " " + gun.getSerialNumber());
+        }
         return ResponseEntity.ok(response);
     }
 
+
     public ResponseEntity<?> getGun(String gunUUID) {
-        return ResponseEntity.ok(gunRepository.getOne(gunUUID));
+        return ResponseEntity.ok(gunRepository.findById(gunUUID).orElseThrow(EntityNotFoundException::new));
     }
 
     public ResponseEntity<?> changeCaliberUnitPrice(String caliberUUID, Float price, String pinCode) throws NoUserPermissionException {
@@ -500,10 +407,14 @@ public class ArmoryService {
     }
 
     public ResponseEntity<?> signUpkeepAmmo(String ammoInEvidenceUUID, String imageUUID, String pinCode) throws NoUserPermissionException {
-        AmmoInEvidenceEntity a = ammoInEvidenceRepository.getOne(ammoInEvidenceUUID);
-        String code = Hashing.sha256().hashString(pinCode, StandardCharsets.UTF_8).toString();
-        UserEntity user = userRepository.findByPinCode(code);
-        if (!user.getUserPermissionsList().contains(UserSubType.WEAPONS_WAREHOUSEMAN.getName())) {
+
+        AmmoInEvidenceEntity a = ammoInEvidenceRepository.findById(ammoInEvidenceUUID).orElseThrow(() -> new EntityNotFoundException("Nie znaleziono wpisu amunicji"));
+        String code = getHash(pinCode);
+        UserEntity user = userRepository.findByPinCode(code).orElse(null);
+        if (user == null) {
+            throw new NoUserPermissionException();
+        }
+        if (user.getUserPermissionsList() == null || !user.getUserPermissionsList().contains(UserSubType.WEAPONS_WAREHOUSEMAN.getName())) {
             filesRepository.deleteById(imageUUID);
             return ResponseEntity.badRequest().body("Brak uprawnień");
         }
@@ -513,52 +424,58 @@ public class ArmoryService {
         a.setImageUUID(imageUUID);
         a.setSignedBy(user.getFullName());
         a.setSignedDate(a.getDateTime().toLocalDate());
-        a.setSignedTime(LocalTime.parse(a.getDateTime().toLocalTime().toString().split("\\.")[0]));
+        a.setSignedTime(a.getDateTime().toLocalTime().withNano(0));
         a.lock();
-        ResponseEntity<?> response = historyService.getStringResponseEntity(pinCode, a, HttpStatus.OK, "signUpkeepAmmo", "zabokowano listę z kalibrem " + a.getCaliberName());
+        ResponseEntity<?> response = historyService.getStringResponseEntity(pinCode, a, HttpStatus.OK, "signUpkeepAmmo", "zablokowano listę z kalibrem " + a.getCaliberName());
 
         if (response.getStatusCode().equals(HttpStatus.OK)) {
             LOG.info("zapisuję");
             ammoInEvidenceRepository.save(a);
         }
-        AmmoEvidenceEntity one = ammoEvidenceRepository.getOne(a.getEvidenceUUID());
-
-        List<Boolean> b = new ArrayList<>();
-
-        one.getAmmoInEvidenceEntityList().forEach(e -> b.add(e.isLocked()));
-        if (!b.contains(false)) {
+        AmmoEvidenceEntity one = ammoEvidenceRepository.findById(a.getEvidenceUUID()).orElseThrow(() -> new EntityNotFoundException("Nie znaleziono listy ewidencji"));
+        boolean allLocked = one.getAmmoInEvidenceEntityList().stream().allMatch(AmmoInEvidenceEntity::isLocked);
+        if (allLocked) {
             LOG.info("blokuję całą listę");
             one.lockEvidence();
             ammoEvidenceRepository.save(one);
         }
-
         return response;
     }
 
-    public List<GunUsedDTO> getAllGunUsedIssuance() {
-        return gunUsedRepository.findAll().stream().filter(f -> (f.getIssuanceSign() == null || f.getGunTakerSign() == null) && (f.getAcceptanceSign() == null && f.getGunReturnerSign() == null)).map(m -> {
-            GunUsedDTO dto = Mapping.map(m);
-            dto.setGun(Mapping.map(gunRepository.getOne(m.getGunUUID())));
-            dto.setGunRepresentation(gunRepresentationRepository.getOne(m.getGunRepresentationEntity().getUuid()));
-            return dto;
-        }).sorted(Comparator.comparing(GunUsedDTO::getIssuanceDate).thenComparing(GunUsedDTO::getIssuanceTime).reversed()).collect(Collectors.toList());
+    private String getHash(String pinCode) {
+        return Hashing.sha256().hashString(pinCode, StandardCharsets.UTF_8).toString();
     }
+
+
+    public List<GunUsedDTO> getAllGunUsedIssuance() {
+        return gunUsedRepository.findAll().stream().filter(e -> (e.getIssuanceSign() == null || e.getGunTakerSign() == null) && (e.getAcceptanceSign() == null && e.getGunReturnerSign() == null)).map(e -> {
+            GunUsedDTO dto = Mapping.map(e);
+            gunRepository.findById(e.getGunUUID()).ifPresent(gun -> dto.setGun(Mapping.map(gun)));
+            if (e.getGunRepresentationEntity() != null) {
+                dto.setGunRepresentation(gunRepresentationRepository.findById(e.getGunRepresentationEntity().getUuid()).orElse(null));
+            }
+            return dto;
+        }).sorted(Comparator.comparing(GunUsedDTO::getIssuanceDate).thenComparing(GunUsedDTO::getIssuanceTime).reversed()).toList();
+    }
+
 
     public List<GunUsedDTO> getAllGunUsedAcceptance() {
-        return gunUsedRepository.findAll().stream().filter(f -> (f.getIssuanceSign() != null && f.getGunTakerSign() != null) && (f.getAcceptanceSign() == null || f.getGunReturnerSign() == null)).map(m -> {
-            GunUsedDTO map = Mapping.map(m);
-            map.setGun(Mapping.map(gunRepository.getOne(m.getGunUUID())));
-            return map;
-        }).sorted(Comparator.comparing(GunUsedDTO::getIssuanceDate).thenComparing(GunUsedDTO::getIssuanceTime).reversed()).collect(Collectors.toList());
+        return gunUsedRepository.findAll().stream().filter(e -> e.getIssuanceSign() != null && e.getGunTakerSign() != null && (e.getAcceptanceSign() == null || e.getGunReturnerSign() == null)).map(e -> {
+            GunUsedDTO dto = Mapping.map(e);
+            gunRepository.findById(e.getGunUUID()).ifPresent(gun -> dto.setGun(Mapping.map(gun)));
+            return dto;
+        }).sorted(Comparator.comparing(GunUsedDTO::getIssuanceDate).thenComparing(GunUsedDTO::getIssuanceTime).reversed()).toList();
     }
 
+
     public List<GunUsedDTO> getAllGunUsed(LocalDate firstDate, LocalDate secondDate) {
-        return gunUsedRepository.findAllAcceptanceDayBeetween(firstDate, secondDate).stream().filter(f -> f.getAcceptanceSign() != null && f.getGunReturnerName() != null && f.getIssuanceSign() != null && f.getGunTakerSign() != null).map(m -> {
-            GunUsedDTO map = Mapping.map(m);
-            map.setGun(Mapping.map(gunRepository.getOne(m.getGunUUID())));
-            return map;
-        }).sorted(Comparator.comparing(GunUsedDTO::getAcceptanceDate).thenComparing(GunUsedDTO::getAcceptanceTime).reversed()).collect(Collectors.toList());
+        return gunUsedRepository.findAllByAcceptanceDateBetween(firstDate, secondDate).stream().filter(e -> e.getAcceptanceSign() != null && e.getGunReturnerName() != null && e.getIssuanceSign() != null && e.getGunTakerSign() != null).map(e -> {
+            GunUsedDTO dto = Mapping.map(e);
+            gunRepository.findById(e.getGunUUID()).ifPresent(gun -> dto.setGun(Mapping.map(gun)));
+            return dto;
+        }).sorted(Comparator.comparing(GunUsedDTO::getAcceptanceDate).thenComparing(GunUsedDTO::getAcceptanceTime).reversed()).toList();
     }
+
 
     public List<Gun> getGunList() {
 
@@ -567,94 +484,103 @@ public class ArmoryService {
     }
 
     public List<GunUsedDTO> getGunUsedListAmmoList() {
-        return gunUsedRepository.findAll().stream().filter(f -> f.getAcceptanceSign() == null).sorted(Comparator.comparing(GunUsedEntity::getIssuanceDate).thenComparing(GunUsedEntity::getIssuanceTime).reversed()).map(m -> {
-            GunUsedDTO map = Mapping.map(m);
-            map.setGun(Mapping.map(gunRepository.getOne(m.getGunUUID())));
-            return map;
-        }).collect(Collectors.toList());
+        return gunUsedRepository.findAll().stream().filter(e -> e.getAcceptanceSign() == null).sorted(Comparator.comparing(GunUsedEntity::getIssuanceDate).thenComparing(GunUsedEntity::getIssuanceTime).reversed()).map(e -> {
+            GunUsedDTO dto = Mapping.map(e);
+            gunRepository.findById(e.getGunUUID()).ifPresent(gun -> dto.setGun(Mapping.map(gun)));
+            return dto;
+        }).toList();
     }
 
-    public ResponseEntity<?> signIssuanceGun(String gunUsedUUID, String imageUUID, LocalDate date, LocalTime time, String pinCode) {
-        GunUsedEntity used = gunUsedRepository.getOne(gunUsedUUID);
-        String code = Hashing.sha256().hashString(pinCode, StandardCharsets.UTF_8).toString();
-        UserEntity user = userRepository.findByPinCode(code);
-        if (!user.getUserPermissionsList().contains(UserSubType.WEAPONS_WAREHOUSEMAN.getName())) {
+
+    public ResponseEntity<?> signIssuanceGun(String gunUsedUUID, String imageUUID, LocalDate date, LocalTime time, String pinCode) throws NoUserPermissionException {
+        GunUsedEntity used = gunUsedRepository.findById(gunUsedUUID).orElseThrow(() -> new EntityNotFoundException("Nie znaleziono wpisu wydania broni"));
+        String code = getHash(pinCode);
+        UserEntity user = userRepository.findByPinCode(code).orElse(null);
+        if (user == null) {
+            throw new NoUserPermissionException();
+        }
+        if (user.getUserPermissionsList() == null || !user.getUserPermissionsList().contains(UserSubType.WEAPONS_WAREHOUSEMAN.getName())) {
             filesRepository.deleteById(imageUUID);
             return ResponseEntity.badRequest().body("Brak uprawnień");
         }
-        GunEntity one = gunRepository.getOne(used.getGunUUID());
+        GunEntity gun = gunRepository.findById(used.getGunUUID()).orElseThrow(() -> new EntityNotFoundException("Nie znaleziono broni"));
         used.setIssuanceBy(user.getFullName());
         used.setIssuanceSign(imageUUID);
         used.setIssuanceDate(date);
-        used.setIssuanceTime(time);
+        used.setIssuanceTime(time.withNano(0));
         gunUsedRepository.save(used);
-        LOG.info("podpisano wydanie broni: " + one.getModelName() + " " + one.getSerialNumber());
-        return ResponseEntity.ok("podpisano wydanie broni: " + one.getModelName() + " " + one.getSerialNumber());
+        String msg = "podpisano wydanie broni: " + gun.getModelName() + " " + gun.getSerialNumber();
+        LOG.info(msg);
+        return ResponseEntity.ok(msg);
     }
 
     public ResponseEntity<?> signTakerGun(String gunUsedUUID, String imageUUID, Integer memberLeg) {
-        GunUsedEntity used = gunUsedRepository.getOne(gunUsedUUID);
-        GunEntity one = gunRepository.getOne(used.getGunUUID());
-        MemberEntity one1 = memberRepository.findByLegitimationNumber(memberLeg).orElseThrow(EntityNotFoundException::new);
-        used.setGunTakerName(one1.getFullName());
+        GunUsedEntity used = gunUsedRepository.findById(gunUsedUUID).orElseThrow(() -> new EntityNotFoundException("Nie znaleziono wydania broni"));
+        GunEntity gun = gunRepository.findById(used.getGunUUID()).orElseThrow(() -> new EntityNotFoundException("Nie znaleziono broni"));
+        MemberEntity member = memberRepository.findByLegitimationNumber(memberLeg).orElseThrow(() -> new EntityNotFoundException("Nie znaleziono członka"));
+        used.setGunTakerName(member.getFullName());
         used.setGunTakerSign(imageUUID);
         gunUsedRepository.save(used);
-        LOG.info("podpisano przyjęcie broni: " + one.getModelName() + " " + one.getSerialNumber() + " przez: " + one1.getFullName());
-        return ResponseEntity.ok("podpisano przyjęcie broni: " + one.getModelName() + " " + one.getSerialNumber());
+        LOG.info("podpisano przyjęcie broni: {} {} przez: {}", gun.getModelName(), gun.getSerialNumber(), member.getFullName());
+        return ResponseEntity.ok("podpisano przyjęcie broni: " + gun.getModelName() + " " + gun.getSerialNumber());
     }
+
 
     public ResponseEntity<?> signReturnerGun(String gunUsedUUID, String imageUUID, Integer memberLeg) {
-        GunUsedEntity used = gunUsedRepository.getOne(gunUsedUUID);
-        GunEntity one = gunRepository.getOne(used.getGunUUID());
-        MemberEntity one1 = memberRepository.findByLegitimationNumber(memberLeg).orElseThrow(EntityNotFoundException::new);
-        used.setGunReturnerName(one1.getFullName());
+        GunUsedEntity used = gunUsedRepository.findById(gunUsedUUID).orElseThrow(() -> new EntityNotFoundException("Nie znaleziono wydania broni"));
+        GunEntity gun = gunRepository.findById(used.getGunUUID()).orElseThrow(() -> new EntityNotFoundException("Nie znaleziono broni"));
+        MemberEntity member = memberRepository.findByLegitimationNumber(memberLeg).orElseThrow(() -> new EntityNotFoundException("Nie znaleziono członka"));
+        used.setGunReturnerName(member.getFullName());
         used.setGunReturnerSign(imageUUID);
         gunUsedRepository.save(used);
-        LOG.info("podpisano zdanie broni: " + one.getModelName() + " " + one.getSerialNumber() + " przez: " + one1.getFullName());
-        return ResponseEntity.ok("podpisano zdanie broni: " + one.getModelName() + " " + one.getSerialNumber());
+        LOG.info("podpisano zdanie broni: {} {} przez: {}", gun.getModelName(), gun.getSerialNumber(), member.getFullName());
+        return ResponseEntity.ok("podpisano zdanie broni: " + gun.getModelName() + " " + gun.getSerialNumber());
     }
 
-    public ResponseEntity<?> signAcceptanceGun(String gunUsedUUID, String imageUUID, LocalDate date, LocalTime time, String pinCode) {
-        GunUsedEntity used = gunUsedRepository.getOne(gunUsedUUID);
-        String code = Hashing.sha256().hashString(pinCode, StandardCharsets.UTF_8).toString();
-        UserEntity user = userRepository.findByPinCode(code);
-        if (!user.getUserPermissionsList().contains(UserSubType.WEAPONS_WAREHOUSEMAN.getName())) {
+
+    public ResponseEntity<?> signAcceptanceGun(String gunUsedUUID, String imageUUID, LocalDate date, LocalTime time, String pinCode) throws NoUserPermissionException {
+        String code = getHash(pinCode);
+        UserEntity user = userRepository.findByPinCode(code).orElse(null);
+        if (user == null || user.getUserPermissionsList() == null || !user.getUserPermissionsList().contains(UserSubType.WEAPONS_WAREHOUSEMAN.getName())) {
             filesRepository.deleteById(imageUUID);
-            return ResponseEntity.badRequest().body("Brak uprawnień");
+            throw new NoUserPermissionException();
         }
-        GunEntity one = gunRepository.getOne(used.getGunUUID());
+        GunUsedEntity used = gunUsedRepository.findById(gunUsedUUID).orElseThrow(EntityNotFoundException::new);
+        GunEntity gun = gunRepository.findById(used.getGunUUID()).orElseThrow(EntityNotFoundException::new);
         used.setAcceptanceBy(user.getFullName());
         used.setAcceptanceSign(imageUUID);
         used.setAcceptanceDate(date);
         used.setAcceptanceTime(time);
-        GunUsedEntity save = gunUsedRepository.save(used);
-        addUseToGun(one.getUuid(), save.getUuid());
-        LOG.info("podpisano przyjęcie broni: " + one.getModelName() + " " + one.getSerialNumber());
-        return ResponseEntity.ok("podpisano przyjęcie broni: " + one.getModelName() + " " + one.getSerialNumber());
+        GunUsedEntity saved = gunUsedRepository.save(used);
+        addUseToGun(gun.getUuid(), saved.getUuid());
+        LOG.info("Podpisano przyjęcie broni: {} {}", gun.getModelName(), gun.getSerialNumber());
+        return ResponseEntity.ok("Podpisano przyjęcie broni: " + gun.getModelName() + " " + gun.getSerialNumber());
     }
 
     public ResponseEntity<?> getGunUsedByUUID(String gunUsedUUID) {
-        GunUsedEntity one = gunUsedRepository.getOne(gunUsedUUID);
-        GunUsedDTO map = Mapping.map(one);
-        map.setGun(Mapping.map(gunRepository.getOne(one.getGunUUID())));
-        return ResponseEntity.ok(map);
+        GunUsedEntity gunUsed = gunUsedRepository.findById(gunUsedUUID).orElseThrow(EntityNotFoundException::new);
+        GunEntity gun = gunRepository.findById(gunUsed.getGunUUID()).orElseThrow(EntityNotFoundException::new);
+        GunUsedDTO dto = Mapping.map(gunUsed);
+        dto.setGun(Mapping.map(gun));
+        return ResponseEntity.ok(dto);
     }
 
-    public ResponseEntity<?> addGunSign(String gunUUID, String imageUUID, String pinCode) {
-        GunEntity one = gunRepository.getOne(gunUUID);
-        String code = Hashing.sha256().hashString(pinCode, StandardCharsets.UTF_8).toString();
-        UserEntity user = userRepository.findByPinCode(code);
-        if (!user.getUserPermissionsList().contains(UserSubType.WEAPONS_WAREHOUSEMAN.getName())) {
+
+    public ResponseEntity<?> addGunSign(String gunUUID, String imageUUID, String pinCode) throws NoUserPermissionException {
+        String code = getHash(pinCode);
+        UserEntity user = userRepository.findByPinCode(code).orElse(null);
+        if (user == null || user.getUserPermissionsList() == null || !user.getUserPermissionsList().contains(UserSubType.WEAPONS_WAREHOUSEMAN.getName())) {
             filesRepository.deleteById(imageUUID);
-            return ResponseEntity.badRequest().body("Brak uprawnień");
+            throw new NoUserPermissionException();
         }
-        one.setAddedSign(imageUUID);
-        one.setAddedBy(user.getFullName());
-        one.setAddedUserUUID(user.getUuid());
-        gunRepository.save(one);
-        LOG.info("podpisano przyjęcie na stan broni: " + one.getModelName() + " " + one.getSerialNumber());
-        return ResponseEntity.ok("podpisano przyjęcie broni: " + one.getModelName() + " " + one.getSerialNumber());
-
+        GunEntity gun = gunRepository.findById(gunUUID).orElseThrow(EntityNotFoundException::new);
+        gun.setAddedSign(imageUUID);
+        gun.setAddedBy(user.getFullName());
+        gun.setAddedUserUUID(user.getUuid());
+        gunRepository.save(gun);
+        LOG.info("Podpisano przyjęcie na stan broni: {} {}", gun.getModelName(), gun.getSerialNumber());
+        return ResponseEntity.ok("Podpisano przyjęcie broni: " + gun.getModelName() + " " + gun.getSerialNumber());
     }
+
 
 }
